--- a/src/app/pages/product-details/child-components/product-description/product-description.component.scss
+++ b/src/app/pages/product-details/child-components/product-description/product-description.component.scss
@@ -27,9 +27,10 @@
     }
 
     .content-details-text {
+      text-align: justify;
       font-size: 20px;
       line-height: 30px;
-      color: #a9acc6;
+      color: #9496b0;
     }
   }
 }
@@ -86,6 +87,17 @@
   flex: 0 0 66.6667%;
 }
 
+
+.button-see-more {
+  border: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+}
+
 .see-more {
   margin: 0px;
   border-style: none;
@@ -104,6 +116,34 @@
   text-align: center;
   padding: 1.5rem;
 }
+
+.active-style-scroll {
+  overflow-y: scroll;
+  max-height: auto;
+}
+.active-style-scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.active-style-scroll::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+.active-style-scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    color-stop(0.44, rgb(209, 181, 240)),
+    color-stop(0.72, rgb(173, 136, 219)),
+    color-stop(0.86, rgb(200, 97, 247))
+  );
+}
+
 
 @media screen and (max-width: 768px) {
   .content-details {
