--- a/src/assets/css/root-style.scss
+++ b/src/assets/css/root-style.scss
@@ -160,6 +160,14 @@ body {
   display: flex;
 }
 
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+}
+
 .width-33 {
   width: 33%;
 }
@@ -209,6 +217,10 @@ body {
   line-height: 1.5;
   appearance: none;
   border-radius: 0.375rem;
+}
+
+.button-style:hover {
+  transform: scale(1.08);
 }
 
 
