update: - finish order page

--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.html
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.html
@@ -20,7 +20,7 @@
     <div class="sub">
       <div class="info">
         <label>Số lượng: </label>
-        <div class="text">{{ this.order?.receipts?.receiptDetails?.length }}</div>
+        <div class="text">{{ this.totalAmount }}</div>
       </div>
       <div class="info">
         <label>Tổng tiền: </label>
