fix and feat completed create order completed checkout page add some query change UI shopping cart add some pipe

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,10 +2,10 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-       Liện hệ
+        Liện hệ
       </div>
       <div class="title-route">
-       Trang chủ. <span>Liên hệ</span>
+        Trang chủ. <span>Liên hệ</span>
       </div>
     </div>
   </div>
@@ -18,7 +18,9 @@
           Về chúng tôi
         </div>
         <p class="content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos, unde veniam, reprehenderit sed facilis nulla veritatis assumenda molestias neque blanditiis sint numquam debitis soluta. Ratione nostrum in quod aliquam!
+          Chúng tôi luôn cố gắng, cải thiện với phương châm “ khách hàng là thượng đế phải quan tâm đến trải nghiệm của
+          khách hàng”. Vậy nên, chúng tôi đang ngày càng nỗ lực, ngày càng hoàn thiện bản thân để có thể phù hợp với
+          khách hàng.
         </p>
       </div>
       <div class="contact-way flex-width">
@@ -45,7 +47,8 @@
           Liên lạc
         </div>
         <div class="content" style="margin-bottom: 20px;">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit cumque molestias deleniti dolores, illum neque quod tempora eum iure deserunt ipsam rem aspernatur beatae. Deserunt perferendis molestiae quaerat nam?
+          Nếu như bạn đang muốn tìm một công ty quan tâm đến cảm nhận của khách hàng, luôn muốn khách hàng có những trải
+          nghiệm tuyệt vời, tốt nhất thì bạn có thể đến liên lạc với chúng tôi
         </div>
         <form>
           <div class="d-flex">
@@ -59,7 +62,8 @@
       </div>
 
       <div class="flex-width">
-        <img style="width: 90%;" src="https://dung-kun.github.io/cheems-angular-web/assets/images/contact-us-image.jpg" alt="">
+        <img style="width: 90%;" src="https://dung-kun.github.io/cheems-angular-web/assets/images/contact-us-image.jpg"
+          alt="">
       </div>
     </div>
   </div>
