--- a/src/app/shares/components/cart-card/cart-card.component.scss
+++ b/src/app/shares/components/cart-card/cart-card.component.scss
@@ -8,6 +8,11 @@
   position: relative;
   transition: height 0.5s ease-in-out, opacity 0.1s linear 0.1s;
   width: 100%;
+  background: #fff;
+  border-bottom: 0;
+  padding: 16px 24px;
+  box-shadow: 0px 0px 25px 10px #f5f5fc;
+  position: relative;
 
   .cart-image {
     display: inline-block;
@@ -82,8 +87,8 @@
     position: absolute;
     display: flex;
     align-items: center;
-    top: 0;
-    right: 0;
+    top: 16px;
+    right: 24px;
     background-color: transparent;
     border: 0;
     padding: 0px;
