--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -74,9 +74,9 @@
       width: calc(100% - 16px);
       display: flex;
       align-items: center;
+      justify-content: space-between;
       max-height: 56px;
     }
-
   }
 }
 
@@ -124,12 +124,12 @@ form {
         width: 100%;
       }
 
-      .input-style.is-valid{
+      .input-style.is-valid {
         border-color: #198754;
       }
 
-      .input-style.is-invalid{
-        border-color: #dc3545;;
+      .input-style.is-invalid {
+        border-color: #dc3545;
       }
     }
 
@@ -217,7 +217,6 @@ table {
   border-spacing: 0;
 }
 
-
 .d-none {
   display: none;
   opacity: 0;
@@ -243,7 +242,6 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-
 .shipping-select {
   margin-top: 12px;
   position: relative;
@@ -251,8 +249,9 @@ input::-webkit-inner-spin-button {
   list-style-type: none;
   li {
     border-bottom: 1px solid #d0d0d0;
-
+    border-radius: 10px;
     .button-non-border {
+      border-radius: 10px;
       border: 0;
       padding: 0;
       position: static;
@@ -284,3 +283,84 @@ input::-webkit-inner-spin-button {
   display: block;
 }
 
+.row-img {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  overflow-y: hidden;
+}
+
+.column-img {
+  // padding: 0 10px;
+  position: relative;
+  flex: 0 0 25%;
+  float: left;
+  .button-cancel-style {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    background-color: #fff;
+    box-shadow: 0px 0px 25px 10px #f5f5fc;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    .icon-cancel-style {
+      color: #151875;
+      height: 16px;
+      width: 16px;
+      margin-inline-end: 0;
+    }
+
+    span {
+      line-height: 16px;
+    }
+  }
+
+  .delete-button:hover {
+    background-color: rgb(210, 41, 41);
+    .icon-cancel-style {
+      color: #fff;
+    }
+  }
+}
+
+img {
+  object-fit: contain;
+  border-radius: 5px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+
+.button-style:disabled {
+  opacity: 0.6;
+  color: black;
+}
+.active-style-scroll {
+  overflow-x: auto;
+}
+.active-style-scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.active-style-scroll::-webkit-scrollbar {
+  height: 10px;
+  background-color: #f5f5f5;
+}
+
+.active-style-scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    right top,
+    color-stop(0.44, rgb(122, 153, 217)),
+    color-stop(0.72, rgb(73, 125, 189)),
+    color-stop(0.86, rgb(28, 58, 148))
+  );
+}
