--- a/src/app/pages/shopping-cart/shopping-cart.component.scss
+++ b/src/app/pages/shopping-cart/shopping-cart.component.scss
@@ -5,7 +5,6 @@
 .card-item-list {
   display: inline-block;
   width: 100%;
-
 }
 
 .item-list {
@@ -20,26 +19,6 @@
   }
 }
 
-table {
-  thead {
-    width: 100%;
-    color: #1d3178;
-    th {
-      padding-bottom: 30px;
-      font-size: 20px;
-      line-height: 23px;
-    }
-  }
-  tbody {
-    td {
-      padding: 15px 0;
-      font-size: 14px;
-      line-height: 16px;
-      color: #15245e;
-      border-bottom: 1px solid #e1e1e4;
-    }
-  }
-}
 
 img {
   width: 40%;
@@ -104,7 +83,6 @@ img {
   }
 }
 
-
 .no-product {
   border-radius: 8px;
   background-color: rgb(255, 255, 255);
@@ -151,6 +129,61 @@ img {
       transform: scale(1.05);
     }
   }
+}
+
+
+.item-checkbox {
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  border-bottom: 0;
+  padding: 16px 24px;
+  box-shadow: 0px 0px 25px 10px #f5f5fc;
+}
+
+.round {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.round label {
+  background-color: #fff;
+  border: 1px solid #19d16f;
+  box-shadow: inset 0 2px 0 0 rgb(0 0 0 / 2%);
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  position: absolute;
+  top: 0;
+  width: 28px;
+}
+
+.round label:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.round input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
