--- a/src/app/shares/components/cart-card/cart-card.component.html
+++ b/src/app/shares/components/cart-card/cart-card.component.html
@@ -1,7 +1,8 @@
 <article class="cart-card">
   <a routeLink="" class="cart-image">
     <div class="image-wrapper">
-      <img class="image-style" alt="..." [src]="cartItem?.productTypes[0]?.medias[0].filePath">
+      <img class="image-style" alt="..." [src]="cartItem?.productTypes[0]?.medias[0]?.filePath"
+      onerror="this.src='./../../../../assets/images/no-image-beidou.png'">
     </div>
   </a>
   <div class="cart-details">
@@ -25,13 +26,13 @@
         <span class="item-title">
           <span>Thương hiệu:</span>
         </span>
-        <span class="value-text">{{ cartItem?.productTypes[0]?.metaDatas.manufacturers[0].name }}</span>
+        <span class="value-text">{{ cartItem?.productTypes[0]?.metaDatas?.manufacturers[0]?.name }}</span>
       </li>
       <li>
         <span class="item-title">
           <span>Màu sắc:</span>
         </span>
-        <span class="value-text">{{ cartItem?.productTypes[0]?.metaDatas.color }}</span>
+        <span class="value-text">{{ cartItem?.productTypes[0]?.metaDatas?.color }}</span>
       </li>
       <li style="flex: 1 1 100%;">
         <span class="item-title">
@@ -57,39 +58,8 @@
     </ul>
   </div>
   <div class="cart-action">
-    <!-- <div class="Actions-module--quantitySelect__NaP7p">
-      <div class="Field-module--childWrapper__xVuBH">
-        <div><select aria-required="false" class="Select-module--select__DZCCK" aria-label="Quantity">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-          </select><svg
-            class="IconWrapper-module--icon__e4eqD Select-module--chevronDown__Fche0 IconWrapper-module--normal__GDUMP"
-            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            focusable="false">
-            <path d="M12 14.9l4.95-4.95.707.707-4.95 4.95-.707.707-5.657-5.657.707-.707L12 14.9z"></path>
-          </svg></div>
-      </div>
-    </div> -->
   </div>
-  <button class="delete-icon-button-style" type="button">
+  <button class="delete-icon-button-style" type="button" (click)="changeAmount(0)">
     <i class="ai-trash-can"></i>
   </button>
 </article>
