--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -50,7 +50,7 @@
                 </div>
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/personal-information">Trang cá nhân</a></li>
+                <li><a class="dropdown-item" routerLink="personal-information">Trang cá nhân</a></li>
                 <li><a class="dropdown-item" type="button" (click)="logout()">Đăng xuất</a></li>
               </ul>
             </li>
