--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.scss
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.scss
@@ -15,6 +15,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img {
+      height: 70px;
+      width: 70px;
+    }
   }
 
   .order-preview {
