--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-status-modal/order-status-modal.component.scss
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-status-modal/order-status-modal.component.scss
@@ -112,6 +112,8 @@
         margin: 5px 0px;
         padding-left: 20px;
         flex-direction: column;
+        overflow-x:hidden !important;
+        overflow-y:auto !important;
       }
     }
   }
