--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-status-modal/child-component/product-view/product-view.component.html
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-status-modal/child-component/product-view/product-view.component.html
@@ -5,6 +5,6 @@
   <div class="product-info">
     <div class="info-name">{{ productName }}</div>
     <div class="info-amount">số lượng: {{ productAmount }}</div>
-    <div class="info-price">giá: {{ productPrice }}</div>
+    <div class="info-price">giá: {{ productPrice | currencyFormat}}</div>
   </div>
 </div>
