update: - fix text in home page - fix spacing of item in cart page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -101,7 +101,7 @@
     </div>
     <div class="content">
       <div class="title">
-        Các ứng dụng nổi bật
+        Các sản phẩm nổi bật
       </div>
       <app-ow-carousel-card [items]="this.productType$ | async">
 
